Bug 1487311 - accessibility doesn't assosiate ids in shadow DOM, r=jamie, sr=smaug